OOP, code now in JS file

--- a/src/index.html
+++ b/src/index.html
@@ -14,107 +14,6 @@
     <div id="locations"></div>
   </body>
 
-  <script>
-    var mapProp, map;
-
-    function addMarker(lat, lng) {
-      console.log("adding marker... at ", lat, lng);
-
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(lat, lng),
-        map: map,
-      });
-
-      // to remove a marker:
-      // marker.setMap(null);
-      // we gotta save these markers to an array on a larger scope
-      // to retain that pointer so we can do that later tho
-    }
-
-    function addListItem(lat, lng, tz) {
-      console.log("adding list item to HTML");
-
-      var listItem = document.createElement("li");
-      listItem.innerHTML = `<div style="display: flex;">
-        <p>${lat}, ${lng}</p>
-        <b>${tz}</b>
-      </div>`;
-
-      console.log(document.getElementById("locations"));
-
-      document.getElementById("locations").appendChild(listItem);
-    }
-
-    function addLocation(lat, lng, tz) {
-      addMarker(lat, lng);
-      addListItem(lat, lng, tz);
-    }
-
-    function handleClick(event) {
-      console.log("handleClick...");
-
-      var lat = event.latLng.lat();
-      var lng = event.latLng.lng();
-
-      fetch(
-        `https://api.teleport.org/api/locations/${lat},${lng}/?embed=location:nearest-cities/location:nearest-city/city:timezone/tz:offsets-now%20|%20jq%20%27._embedded.%22location:nearest-cities%22[0]._embedded.%22location:nearest-city%22._embedded.%22city:timezone%22%27`
-      )
-        .then(function (response) {
-          return response.json();
-        })
-        .then(function (data) {
-          var tz =
-            data._embedded["location:nearest-cities"][0]._embedded[
-              "location:nearest-city"
-            ]._embedded["city:timezone"].iana_name;
-          console.log(tz);
-
-          addLocation(lat, lng, tz);
-        });
-    }
-
-    function myMap() {
-      mapProp = {
-        center: new google.maps.LatLng(51.508742, -0.12085),
-        zoom: 7,
-      };
-      map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-      getLocation();
-
-      google.maps.event.addListener(map, "click", handleClick);
-      google.maps.event.addListener(map, "touchstart", handleClick);
-    }
-
-    var x = document.getElementById("demo");
-    function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
-      } else {
-        x.innerHTML = "Geolocation is not supported by this browser.";
-      }
-    }
-
-    function showPosition(position) {
-      x.innerHTML =
-        "Latitude: " +
-        position.coords.latitude +
-        "<br>Longitude: " +
-        position.coords.longitude;
-
-      console.log(map);
-      map.setCenter(
-        new google.maps.LatLng(
-          position.coords.latitude,
-          position.coords.longitude
-        )
-      );
-    }
-
-    var d = new Date();
-    var n = d.getTime();
-
-    console.log(n);
-  </script>
   <script src="./index.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxtd2uJWYRCK-Mm8lcJyoBKq7E5s1chZs&callback=myMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxtd2uJWYRCK-Mm8lcJyoBKq7E5s1chZs"></script>
 </html>
