removed test div

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
     <div id="googleMap" style="width: 100%; height: 400px"></div>
 
-    <div id="demo">Test</div>
+    <!-- <div id="demo">Test</div> -->
 
     <div id="locations"></div>
   </body>
