added instructions, added some visual structure

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,59 @@
     <link href="./style.css" rel="stylesheet" />
   </head>
   <body class="p-2">
-    Timezones
+    <div class="container">
+      <h1>Timezones</h1>
 
-    <div id="googleMap" style="width: 100%; height: 400px"></div>
+      <div id="googleMap" style="width: 100%; height: 400px"></div>
 
-    <!-- <div id="demo">Test</div> -->
+      <!-- <div id="demo">Test</div> -->
 
-    <div id="locations"></div>
+      <div id="locations"></div>
+
+      <div>
+        <h2>Instructions:</h2>
+        <ol>
+          <li>Drag the map to an area you want to know the time for</li>
+          <li>Tap/click the specific location</li>
+          <li>??? Profit!!!</li>
+        </ol>
+
+        <h3>What is this?</h3>
+        <p>
+          This is Timezones - just a fun app I spun up to help you get a feel
+          for time zones. Maybe the added gif will give you a deeper impression
+          of the learning experience?
+        </p>
+        <h3>Why tho?</h3>
+        <p>
+          Timezones was made as an experiment for a
+          <a href="https://mintbean.io/" target="_blank"> Mintbean </a>
+          hackathon.
+        </p>
+        <h3>Where is Mintbean?</h3>
+        <p>
+          Mintbean is an internet-based hackathon initiative. They host
+          hackathons every week to help developers and recruiters find each
+          other, and encourage continual learning.
+        </p>
+        <h3>When was this made?</h3>
+        <p>Submitted on September 23rd, 2020.</p>
+        <h3>Who made this?</h3>
+        <p>
+          Me!
+          <a href="https://www.twitter.com/d2dev_" target="_blank"
+            >David Dales</a
+          >.
+        </p>
+        <h3>How does this work?</h3>
+        <p>
+          For details on how this app works, please check out my
+          <a href="https://github.com/davidd647/timezones" target="_blank"
+            >github repo</a
+          >.
+        </p>
+      </div>
+    </div>
   </body>
 
   <script src="./index.js"></script>
